--- a/projeto/src/styles.scss
+++ b/projeto/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Courgette&family=Lato&family=Prata&family=Raleway:wght@300&family=Secular+One&family=Source+Serif+4:opsz@8..60&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Courgette&family=Lato&family=Prata&family=Raleway:wght@300&family=Secular+One&family=Source+Serif+4:opsz@8..60&display=swap');
+
+
+$fonte-destaque: 'Abril Fatface', cursive;
+$fonte-padrao: 'Lato', sans-serif;
+$cinza-escuro: #222222;
+$turquesa: #22A39F;
+$branco: #F3EFE0;
+
+
+@import '~bootstrap/scss/bootstrap.scss';
