--- a/projeto/src/app/navbar/navbar.component.html
+++ b/projeto/src/app/navbar/navbar.component.html
@@ -1,21 +1,44 @@
-<nav class="navbar bg-light">
-    <div class="container-fluid">
-        <a href="#" class="navbar-brand">
-            <img src="assets\Navbar\cnm_04-PhotoRoom.png-PhotoRoom.png" alt="logo" width="80" height="80" class="d-inline-block align-text-top">
-            CineTrip
-        </a>
+<nav class="navbar bg-info navbar-expand-lg navbar-light">
+  <a href="#" class="navbar-brand text-light ">
+        <img src="assets\Navbar\cnm_04-PhotoRoom.png-PhotoRoom.png" alt="logo" width="80" height="80" class="d-inline-block">
+        CineTrip
+  </a>
 
-        <form class="d-flex" role="search">
-            <div class="input-group mb-3 container-fluid">
-                <input type="search" class="form-control" placeholder="Buscar" aria-label="Text input with dropdown button">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Opções</button>
-                <ul class="dropdown-menu dropdown-menu-end">
-                  <li><a class="dropdown-item" href="#">Filmes</a></li>
-                  <li><a class="dropdown-item" href="#">Séries</a></li>
-                  <li><a class="dropdown-item" href="#">Atores</a></li>
-                </ul>
-            </div>
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
-    </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+  </button>
+    
+  <div class="collapse navbar-collapse d-flex justify-content-between container-fluid" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sobre</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categorias
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Ação</a>
+          <a class="dropdown-item" href="#">Terror</a>
+          <a class="dropdown-item" href="#">Comédia</a>
+          <a class="dropdown-item" href="#">Romance</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline d-flex my-2 my-lg-0" role="search">
+      <div class="mb-2 input-group">
+        <input class="form-control mr-sm-2" type="search" placeholder="Digite aqui" aria-label="Search"aria-label="Text input with dropdown button">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button"data-bs-toggle="dropdown" aria-expanded="false">Buscar por...</button>
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" href="#">Atores</a></li>
+          <li><a class="dropdown-item" href="#">Filmes</a></li>
+          <li><a class="dropdown-item" href="#">Séries</a></li>
+        </ul>
+      </div>
+      <button class="btn btn-outline-success my-2 my-lg-0 ml-4" type="submit">Buscar</button>
+    </form>
+  </div>
 </nav>
