--- a/projeto/src/app/app.component.html
+++ b/projeto/src/app/app.component.html
@@ -1,1 +1,3 @@
 <app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<button (click)="ObterfilmesPorNome('vingadores')">ObterfilmesPorNome</button>
