--- a/projeto/src/styles.scss
+++ b/projeto/src/styles.scss
@@ -5,8 +5,14 @@
 $fonte-destaque: 'Abril Fatface', cursive;
 $fonte-padrao: 'Lato', sans-serif;
 $cinza-escuro: #222222;
-$turquesa: #22A39F;
+$turquesa: #319796;
 $branco: #F3EFE0;
 
+$info: $turquesa;
+$light: $branco;
+
+.navbar-brand{
+    font-family: $fonte-destaque;
+}
 
 @import '~bootstrap/scss/bootstrap.scss';
