Alterações no front end

--- a/projeto/src/app/home/sobre/sobre.component.html
+++ b/projeto/src/app/home/sobre/sobre.component.html
@@ -1,11 +1,13 @@
-<h1>Sobre o CineTrip</h1>
-<div class="sobre">
-    <p class="texto-sobre">O CineTrip é um projeto desenvolvido por estudantes do curso de Informática do IFRN. O projeto foi criado a fim ajudar na problemática de buscar informações sobre filmes, séries e atores de forma rápida e prática.</p>
-</div>
-<h2>Desenvolvedores</h2>
-<div class="devs">
-    <p class="nome-devs">Carlos Ney - Desenvolvedor Front-end.</p>
-    <p class="nome-devs">Ester Duarte - Desenvolvedora Front-end.</p>
-    <p class="nome-devs">Gabriel Torquato - Desenvolvedor Back-end.</p>
-    <p class="nome-devs">Theo Henrique - Desenvolvedor Back-end.</p>
-</div>
+<main class="bg-dark">
+    <h1 class="text-center text-light">Sobre o CineTrip</h1>
+    <div class="sobre">
+        <p class="blockquote text-center text-light">O CineTrip é um projeto desenvolvido por estudantes do curso de Informática do IFRN. O projeto foi criado a fim ajudar na problemática de buscar informações sobre filmes, séries e atores de forma rápida e prática.</p>
+    </div>
+    <h2 class="text-center text-light">Desenvolvedores</h2>
+    <div class="blockquote text-center text-light">
+        <p class="nome-devs">Carlos Ney - Desenvolvedor Front-end.</p>
+        <p class="nome-devs">Ester Duarte - Desenvolvedora Front-end.</p>
+        <p class="nome-devs">Gabriel Torquato - Desenvolvedor Back-end.</p>
+        <p class="nome-devs">Theo Henrique - Desenvolvedor Back-end.</p>
+    </div>
+</main>
