--- a/projeto/src/app/app.component.html
+++ b/projeto/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <button (click)="ObterfilmesPorNome('vingadores')">ObterfilmesPorNome</button>
+
+<button class="btn btn-outline-success my-2 my-lg-0 ml-4" type="submit"
+        [routerLink]="['/filmes']"
+        [queryParams]="{part: 'navbar'}"
+        >
+          Buscar
+        </button>
