Modificação no front-end

--- a/projeto/src/app/cartaz-ator/cartaz-ator.component.html
+++ b/projeto/src/app/cartaz-ator/cartaz-ator.component.html
@@ -1,11 +1,10 @@
-<div class="container mt-4">
+ <div class="container mt-4">
     <div class="row">
         <div class="col-3 text-center">
             <button type="button" class="btn btn-info btn-outline-light">
-                <img [src]="filme['poster_path']" class="img-fluid rounded">
+                <img [src]="ator['profile_path']" class="img-fluid rounded">
                 <div>
-                    <p>{{filme['title']}}</p>
-                    <p>{{filme['release_date']}}</p>
+                    <p>{{ator['name']}}</p>
                 </div>
             </button>
         </div>
