--- a/projeto/src/app/cartaz-serie/cartaz-serie.component.html
+++ b/projeto/src/app/cartaz-serie/cartaz-serie.component.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="col-3 text-center">
             <button type="button" class="btn btn-info btn-outline-light">
-                <img [src]="filme['poster_path']" class="img-fluid rounded">
+                <img [src]="serie['poster_path']" class="img-fluid rounded">
                 <div>
-                    <p>{{filme['title']}}</p>
-                    <p>{{filme['release_date']}}</p>
+                    <p>{{serie['name']}}</p>
+                    <p>{{serie['first_air_date']}}</p>
                 </div>
             </button>
         </div>
     </div>
-</div> 
+</div>
