--- a/projeto/src/app/app.component.html
+++ b/projeto/src/app/app.component.html
@@ -1,10 +1,12 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<button (click)="ObterfilmesPorNome('vingadores')">ObterfilmesPorNome</button>
-
-<button class="btn btn-outline-success my-2 my-lg-0 ml-4" type="submit"
-        [routerLink]="['/filmes']"
-        [queryParams]="{part: 'navbar'}"
-        >
-          Buscar
-        </button>
+<div class="bg-dark">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+  
+  
+ <!--  <button class="btn btn-outline-success my-2 my-lg-0 ml-4" type="submit"
+          [routerLink]="['/filmes']"
+          [queryParams]="{part: 'navbar'}"
+          >
+            Buscar
+          </button>-->
+</div>
