--- a/projeto/src/app/home/homepage/homepage.component.html
+++ b/projeto/src/app/home/homepage/homepage.component.html
@@ -1,3 +1,4 @@
 <main>
-<p>homepage</p>
+    <h1 class="h1 text-center text-light">CineTrip</h1>
+    <h2 class="titulo fonte-padrao text-center text-light">Projeto de desenvolvimento dos alunos de informática do IFRN.</h2>
 </main>
