--- a/projeto/src/app/home/sobre/sobre.component.html
+++ b/projeto/src/app/home/sobre/sobre.component.html
@@ -1,10 +1,10 @@
 <main class="bg-dark">
-    <h1 class="text-center text-light">Sobre o CineTrip</h1>
+    <h1 class="text-center text-light fonte-destaque">Sobre o CineTrip</h1>
     <div class="sobre">
-        <p class="blockquote text-center text-light">O CineTrip é um projeto desenvolvido por estudantes do curso de Informática do IFRN. O projeto foi criado a fim ajudar na problemática de buscar informações sobre filmes, séries e atores de forma rápida e prática.</p>
+        <p class="blockquote text-center text-light fonte-padrao">O CineTrip é um projeto desenvolvido por estudantes do curso de Informática do IFRN. O projeto foi criado a fim ajudar na problemática de buscar informações sobre filmes, séries e atores de forma rápida e prática.</p>
     </div>
-    <h2 class="text-center text-light">Desenvolvedores</h2>
-    <div class="blockquote text-center text-light">
+    <h2 class="text-center text-light fonte-destaque">Desenvolvedores</h2>
+    <div class="blockquote text-center text-light fonte-padrao">
         <p class="nome-devs">Carlos Ney - Desenvolvedor Front-end.</p>
         <p class="nome-devs">Ester Duarte - Desenvolvedora Front-end.</p>
         <p class="nome-devs">Gabriel Torquato - Desenvolvedor Back-end.</p>
