--- a/projeto/src/app/cartaz-ator/cartaz-ator.component.html
+++ b/projeto/src/app/cartaz-ator/cartaz-ator.component.html
@@ -1,12 +1,9 @@
- <div class="container mt-4">
-    <div class="row">
-        <div class="col-3 text-center">
-            <button type="button" class="btn btn-info btn-outline-light">
-                <img [src]="ator['profile_path']" class="img-fluid rounded">
-                <div>
-                    <p>{{ator['name']}}</p>
-                </div>
-            </button>
-        </div>
+<div class="col text-center">
+  <button type="button" class="btn btn-info btn-outline-light"
+  (click)="redirecionar()">
+    <img [src]="ator['profile_path']" class="img-fluid rounded" />
+    <div>
+      <p class="titulo">{{ ator["name"] }}</p>
     </div>
-</div> 
+  </button>
+</div>
