--- a/projeto/src/app/cartaz-serie/cartaz-serie.component.html
+++ b/projeto/src/app/cartaz-serie/cartaz-serie.component.html
@@ -1,13 +1,10 @@
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-3 text-center">
-            <button type="button" class="btn btn-info btn-outline-light">
-                <img [src]="serie['poster_path']" class="img-fluid rounded">
-                <div>
-                    <p>{{serie['name']}}</p>
-                    <p>{{serie['first_air_date']}}</p>
-                </div>
-            </button>
-        </div>
+<div class="col text-center">
+  <button type="button" class="btn btn-info btn-outline-light"
+  (click)="redirecionar()">
+    <img [src]="serie['poster_path']" class="img-fluid rounded" />
+    <div>
+      <p class="titulo">{{ serie["name"] }}</p>
+      <p>{{ serie["first_air_date"] }}</p>
     </div>
+  </button>
 </div>
