--- a/projeto/src/app/cartaz/cartaz.component.html
+++ b/projeto/src/app/cartaz/cartaz.component.html
@@ -1,13 +1,13 @@
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-3 text-center">
-            <button type="button" class="btn btn-info btn-outline-light">
-                <img [src]="filme['poster_path']" class="img-fluid rounded">
-                <div>
-                    <p>{{filme['title']}}</p>
-                    <p>{{filme['release_date']}}</p>
-                </div>
-            </button>
-        </div>
+<div class="col text-center">
+  <button 
+  type="button"
+  class="btn btn-info btn-outline-light"
+  (click)="redirecionar()"
+  >
+    <img [src]="filme['poster_path']" class="img-fluid rounded" />
+    <div>
+      <p class="titulo">{{ filme["title"] }}</p>
+      <p class="data">{{ filme["release_date"] }}</p>
     </div>
-</div> 
+  </button>
+</div>
