Edição de botão em atores

--- a/projeto/src/app/ator/ator.component.html
+++ b/projeto/src/app/ator/ator.component.html
@@ -6,3 +6,7 @@
     </div>
 </div>
 
+<div class="container-fluid d-flex justify-content-between">
+    <button (click)="descerPag()" class="btn btn-success" >Descer Pag</button>
+    <button (click)="subirPag()" class="btn btn-success">Subir Pag</button>
+    </div>
