--- a/projeto/src/app/navbar/navbar.component.html
+++ b/projeto/src/app/navbar/navbar.component.html
@@ -84,7 +84,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Buscar por...
+            Buscar por {{tipoPesquisa}}
           </button>
           <!-- TODO: Ajeitar espaçamento do dropdown-->
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
